registro de estudiante

--- a/app/src/main/res/layout/activity_registrar_estudiantes.xml
+++ b/app/src/main/res/layout/activity_registrar_estudiantes.xml
@@ -5,159 +5,156 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".RegistrarEstudiantes"
-    android:background="@drawable/backgroundmain">
+    android:background="@drawable/backgroundmain"
+    tools:ignore="ExtraText">
 
     <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/btn_CrearCuenta"
-        android:layout_width="122dp"
-        android:layout_height="32dp"
-        android:layout_marginStart="128dp"
-        android:layout_marginTop="696dp"
+        android:layout_width="145dp"
+        android:layout_height="43dp"
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="672dp"
         android:background="@drawable/round_button_background"
         android:backgroundTint="@color/white"
         android:fontFamily="sans-serif-medium"
-        android:text="Crear cuenta"
+        android:text="BotonCrear"
         android:textAlignment="center"
         android:textColor="@color/purple_700"
-        android:textSize="16sp"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/imageView12"
-        android:layout_width="357dp"
-        android:layout_height="551dp"
-        android:layout_marginEnd="28dp"
-        android:layout_marginBottom="7dp"
-        app:layout_constraintBottom_toTopOf="@+id/btn_CrearCuenta"
+        android:layout_width="352dp"
+        android:layout_height="614dp"
+        android:layout_marginStart="39dp"
+        android:layout_marginEnd="20dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/texto13"
         app:srcCompat="@android:drawable/screen_background_light" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/idNombreEstudiante"
         android:layout_width="334dp"
         android:layout_height="52dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="160dp"
-        android:layout_marginEnd="39dp"
+        android:layout_marginBottom="4dp"
         android:backgroundTint="#132BFF"
-        android:hint="Juan"
+        android:hint="Nombre"
         android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/texto15"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.649"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/idPrimerApellidoEstudiante"
         android:layout_width="334dp"
         android:layout_height="52dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="228dp"
-        android:layout_marginEnd="39dp"
+        android:layout_marginBottom="536dp"
         android:backgroundTint="#132BFF"
-        android:hint="Martínez"
+        android:hint="Primer apellido"
         android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.727"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/idSegundoApellidoEstudiante"
         android:layout_width="334dp"
         android:layout_height="52dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="296dp"
-        android:layout_marginEnd="39dp"
+        android:layout_marginBottom="468dp"
         android:backgroundTint="#132BFF"
-        android:hint="Martínez"
+        android:hint="Segundo apellido"
         android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.688"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/idCarnetEstudiante"
         android:layout_width="334dp"
         android:layout_height="52dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="364dp"
-        android:layout_marginEnd="39dp"
+        android:layout_marginBottom="404dp"
         android:backgroundTint="#132BFF"
-        android:hint="2021000000"
+        android:hint="Carnet"
         android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.727"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/idCorreoEstudiante"
         android:layout_width="334dp"
         android:layout_height="52dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="432dp"
-        android:layout_marginEnd="39dp"
+        android:layout_marginBottom="272dp"
         android:backgroundTint="#132BFF"
-        android:hint="JuanMartinez@estudiantec.cr"
+        android:hint="Correo"
         android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/idCarreraEstudiante"
-        android:layout_width="334dp"
-        android:layout_height="52dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="500dp"
-        android:layout_marginEnd="39dp"
-        android:backgroundTint="#132BFF"
-        android:hint="Ingenieria en computación"
-        android:inputType="number"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.74"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/idSedeEstudiante"
         android:layout_width="334dp"
         android:layout_height="52dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="568dp"
-        android:layout_marginEnd="39dp"
+        android:layout_marginBottom="140dp"
         android:backgroundTint="#132BFF"
-        android:hint="Cartago"
+        android:hint="Sede"
         android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintHorizontal_bias="0.727"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/idDescripcionEstudiante"
         android:layout_width="334dp"
         android:layout_height="52dp"
-        android:layout_marginStart="38dp"
-        android:layout_marginTop="632dp"
-        android:layout_marginEnd="39dp"
+        android:layout_marginEnd="21dp"
         android:backgroundTint="#132BFF"
-        android:hint="Estudiante regular"
+        android:hint="Descripción"
         android:inputType="number"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/texto23" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/idCarreraEstudiante"
+        android:layout_width="334dp"
+        android:layout_height="52dp"
+        android:layout_marginBottom="204dp"
+        android:backgroundTint="#132BFF"
+        android:hint="Carrera"
+        android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.688"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <com.google.android.material.textfield.TextInputEditText
+        android:id="@+id/idContraseñaEstudiante"
+        android:layout_width="334dp"
+        android:layout_height="52dp"
+        android:layout_marginBottom="340dp"
+        android:backgroundTint="#132BFF"
+        android:hint="**********"
+        android:inputType="number"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.727"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/texto14"
         android:layout_width="331dp"
         android:layout_height="32dp"
-        android:layout_marginEnd="37dp"
         android:fontFamily="sans-serif-medium"
         android:text="Nombre:"
         android:textAlignment="center"
@@ -166,34 +163,48 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.953"
+        app:layout_constraintHorizontal_bias="0.625"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.207" />
+        app:layout_constraintTop_toBottomOf="@+id/texto13"
+        app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/texto16"
+        android:id="@+id/texto15"
         android:layout_width="331dp"
         android:layout_height="32dp"
-        android:layout_marginEnd="37dp"
+        android:layout_marginBottom="572dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Segundo apellido:"
+        android:text="Primer Apellido:"
         android:textAlignment="center"
         android:textColor="#3F51B5"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.4" />
+        app:layout_constraintHorizontal_bias="0.662"
+        app:layout_constraintStart_toStartOf="parent" />
+
+    <TextView
+        android:id="@+id/texto16"
+        android:layout_width="331dp"
+        android:layout_height="32dp"
+        android:layout_marginBottom="504dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="Segundo Apellido:"
+        android:textAlignment="center"
+        android:textColor="#3F51B5"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.737"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/texto17"
         android:layout_width="331dp"
         android:layout_height="32dp"
-        android:layout_marginEnd="37dp"
+        android:layout_marginBottom="440dp"
         android:fontFamily="sans-serif-medium"
         android:text="Carnet:"
         android:textAlignment="center"
@@ -202,70 +213,46 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.93"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.499" />
+        app:layout_constraintHorizontal_bias="0.7"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/texto18"
         android:layout_width="331dp"
         android:layout_height="32dp"
-        android:layout_marginEnd="37dp"
+        android:layout_marginBottom="376dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Correo:"
+        android:text="Contraseña:"
         android:textAlignment="center"
         android:textColor="#3F51B5"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.595" />
+        app:layout_constraintHorizontal_bias="0.737"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/texto19"
         android:layout_width="331dp"
         android:layout_height="32dp"
-        android:layout_marginEnd="37dp"
+        android:layout_marginBottom="308dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Sede:"
+        android:text="Correo"
         android:textAlignment="center"
         android:textColor="#3F51B5"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.883"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.789" />
-
-    <TextView
-        android:id="@+id/texto21"
-        android:layout_width="331dp"
-        android:layout_height="32dp"
-        android:layout_marginEnd="37dp"
-        android:fontFamily="sans-serif-medium"
-        android:text="Descripción:"
-        android:textAlignment="center"
-        android:textColor="#3F51B5"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.883"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.886" />
+        app:layout_constraintHorizontal_bias="0.7"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/texto20"
         android:layout_width="331dp"
         android:layout_height="32dp"
-        android:layout_marginEnd="37dp"
+        android:layout_marginBottom="240dp"
         android:fontFamily="sans-serif-medium"
         android:text="Carrera:"
         android:textAlignment="center"
@@ -274,54 +261,55 @@
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.692" />
+        app:layout_constraintHorizontal_bias="0.7"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
-        android:id="@+id/texto15"
+        android:id="@+id/texto21"
         android:layout_width="331dp"
         android:layout_height="32dp"
-        android:layout_marginEnd="37dp"
+        android:layout_marginBottom="172dp"
         android:fontFamily="sans-serif-medium"
-        android:text="Primer apellido:"
+        android:text="Sede:"
         android:textAlignment="center"
         android:textColor="#3F51B5"
         android:textSize="20sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.976"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.303" />
+        app:layout_constraintHorizontal_bias="0.7"
+        app:layout_constraintStart_toStartOf="parent" />
 
-    <ImageView
-        android:id="@+id/imageView11"
-        android:layout_width="88dp"
-        android:layout_height="64dp"
-        android:layout_marginEnd="160dp"
-        android:layout_marginBottom="648dp"
+    <TextView
+        android:id="@+id/texto23"
+        android:layout_width="331dp"
+        android:layout_height="32dp"
+        android:layout_marginBottom="116dp"
+        android:fontFamily="sans-serif-medium"
+        android:text="Descripción:"
+        android:textAlignment="center"
+        android:textColor="#3F51B5"
+        android:textSize="20sp"
+        android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:srcCompat="@drawable/logo" />
+        app:layout_constraintHorizontal_bias="0.662"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/texto13"
-        android:layout_width="341dp"
-        android:layout_height="62dp"
+        android:layout_width="318dp"
+        android:layout_height="41dp"
         android:layout_marginEnd="37dp"
+        android:layout_marginBottom="676dp"
         android:fontFamily="sans-serif-medium"
         android:text="Registrar estudiante"
         android:textAlignment="center"
         android:textColor="#F6F6F6"
-        android:textSize="34sp"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.124" />
+        app:layout_constraintHorizontal_bias="0.892"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
