--- a/app/src/main/res/layout/activity_propuesta.xml
+++ b/app/src/main/res/layout/activity_propuesta.xml
@@ -11,9 +11,11 @@
         android:id="@+id/imageView5"
         android:layout_width="371dp"
         android:layout_height="376dp"
-        app:srcCompat="@android:drawable/screen_background_light"
-        tools:layout_editor_absoluteX="19dp"
-        tools:layout_editor_absoluteY="204dp" />
+        android:layout_marginEnd="21dp"
+        android:layout_marginBottom="40dp"
+        app:layout_constraintBottom_toTopOf="@+id/btn_EnviarPropuesta"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@android:drawable/screen_background_light" />
 
     <ImageView
         android:id="@+id/imageView3"
