--- a/app/src/main/res/layout/activity_seleccionar_eventos.xml
+++ b/app/src/main/res/layout/activity_seleccionar_eventos.xml
@@ -39,7 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/textViewActividad"
-        app:layout_constraintBottom_toTopOf="@id/botonAgregar">
+        app:layout_constraintBottom_toTopOf="@id/textViewRecordatorio">
 
         <!-- LinearLayout vertical para colocar los TextView de actividades -->
         <LinearLayout
@@ -74,15 +74,30 @@
     </ScrollView>
 
     <!-- Botón "Agregar a eventos de interés" -->
+
+    <TextView
+        android:id="@+id/textViewRecordatorio"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:text="Recuerda inscribirte al evento desde el apartado “Mis eventos”"
+        android:textAlignment="center"
+        android:textColor="#FFFFFF"
+        android:textSize="18sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/scrollViewActividades" />
+
     <Button
         android:id="@+id/botonAgregar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
         android:text="Agregar a eventos de interés"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/scrollViewActividades" />
+        app:layout_constraintTop_toBottomOf="@+id/textViewRecordatorio" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
